# misctools

./: ChangeLog  LICENSE  Makefile.am  README  README.md  config.h.in  configure.ac
basecvt/: Makefile.am  basecvt.1.in  basecvt.c
bat/: Makefile.am  bat.1.in  bat.c
bin2c/: Makefile.am  bin2c.1.in  bin2c.c
cpmod/: Makefile.am  cpmod.1.in  cpmod.c
dirstack/: Makefile.am  TODO  dirstack.1.in  dirstack.c
dirtree/: Makefile.am  dirtree.1.in  dirtree.c
djinn/: Makefile.am  djinn.1.in  djinn.c  hello.java
docs/: index.md
ftrunc/: Makefile.am  ftrunc.1.in  ftrunc.c
pascii/: Makefile.am  pascii.1.in  pascii.c
pkgenv/: Makefile.am  automake_patch.txt  pkgenv.1.in  pkgenv.c
ranline/: Makefile.am  ranline.1.in  ranline.c
scripts/: Makefile.am  man2pdf  man2pdf.1.in  man2ps  man2ps.1.in  ps2pdf  ps2pdf.1.in  psprint  psprint.1.in  texi2pdf  texi2pdf.1.in  texi2ps  texi2ps.1.in
stat/: stat.1.in  stat.c
textlock/: Makefile.am  textlock.1.in  textlock.c  textlock.h  tlpasswd.c
wrap/: Makefile.am  wrap.1.in  wrap.c
